--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "1.0.0-beta.2",
-    "@angular/animations": "5.2.9",
+    "@angular/animations": "^5.2.9",
     "@angular/cdk": "5.2.4",
     "@angular/common": "5.2.9",
     "@angular/compiler": "5.2.9",
@@ -37,6 +37,7 @@
     "hammerjs": "2.0.8",
     "jquery": "3.2.1",
     "moment": "2.18.1",
+    "ngx-toastr": "^8.8.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
     "rxjs": "5.5.10",
