--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "hammerjs": "2.0.8",
     "jquery": "3.2.1",
     "moment": "2.18.1",
+    "ng2-dnd": "^5.0.2",
     "ngx-toastr": "^8.8.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
