--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "ngx-toastr": "^8.8.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
+    "remove-markdown": "^0.3.0",
     "rxjs": "5.5.10",
+    "simplemde": "^1.11.2",
     "ts-json-mapper": "0.0.5",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.4"
@@ -54,7 +56,9 @@
     "@types/bootstrap": "3.3.32",
     "@types/jquery": "1.10.31",
     "@types/mime-types": "^2.1.0",
-    "@types/node": "6.0.73",
+    "@types/node": "^6.0.73",
+    "@types/remove-markdown": "^0.1.1",
+    "@types/simplemde": "^1.11.7",
     "codelyzer": "4.2.1",
     "ts-node": "5.0.1",
     "tslint": "5.9.1",
