--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,15 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "types": [
+      "node"
+    ],
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2016",
+      "es2017.object",
       "dom"
     ]
   }
