--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "googleapis": "28.1.0",
     "hammerjs": "2.0.8",
     "jquery": "3.2.1",
+    "lodash": "^4.17.10",
     "mime-types": "^2.1.18",
     "moment": "2.18.1",
     "ng2-dnd": "^5.0.2",
@@ -55,6 +56,7 @@
     "@angular/language-service": "5.2.9",
     "@types/bootstrap": "3.3.32",
     "@types/jquery": "1.10.31",
+    "@types/lodash": "^4.14.110",
     "@types/mime-types": "^2.1.0",
     "@types/node": "^6.0.73",
     "@types/remove-markdown": "^0.1.1",
